# AgentMonitor

./: .gitignore  README.md  pyproject.toml
contextdb/: __init__.py  __main__.py  control.py  dashboard.py  decorators.py  insights.py  models.py  session.py  store.py  tokens.py
contextdb/adapters/: __init__.py  anthropic_sdk.py  claude_code_hooks.py  transcript_import.py
contextdb/static/: dashboard.html
examples/: anthropic_demo.py  control_demo.py  demo.py  live_demo.py
tests/: conftest.py  test_adapters.py  test_contextdb.py  test_control_extra.py  test_decorators.py  test_insights.py  test_store.py  test_tokens.py
tests/fixtures/: sample_transcript.jsonl
